--- a/data/settings.json
+++ b/data/settings.json
@@ -1,1 +1,1 @@
-{"token":"NDU0NjIyMDQ2Njc3MjM3Nzgy.Dfwegg.0SZTc-h62rOwgV8cH27WOSVkcq0","client":" 45462204667723778","tag":";","case":"true","separator":"\\s+"}
+{"token":"NDU0NjIyMDQ2Njc3MjM3Nzgy.DgP4JA.Cpgbmkjb6Gk_mJ-uqca_dlYheO4","client":" 45462204667723778","tag":";","case":"true","separator":"\\s+"}
